MERN-CRUD Client Files
MERN-CRUD React Client Files

--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@
 .toggler-icon {
 	width: 30px;
 	height: 3px;
-	background-color: #e74c3c;
+	background-color: #fff;
 	display: block;
 	transition: all 0.2s;
 }
